--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 
 @layer base {
   body {
-    @apply bg-yellow-50 border-t-8 border-yellow-400;
+    @apply bg-yellow-50 dark:bg-gray-900 border-t-8 border-yellow-400;
   }
   h1,
   h2,
