--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
 @import url("https://use.typekit.net/kwh6rch.css");
 
 @tailwind base;
@@ -7,14 +6,10 @@
 
 @layer base {
   body {
-    @apply bg-yellow-50 dark:bg-gray-900 border-t-8 border-yellow-400;
+    @apply bg-yellow-50 dark:bg-gray-900;
   }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply font-peachy;
+
+  ::selection {
+    @apply bg-yellow-500 text-white;
   }
 }
